# altai-digital-twin

./: README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  backend-layout-changes.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: auth.py  chat.py  ingest.py  questionnaire.py  routes.py
backend/app/api/v1/schemas/: _base.py  auth.py  health.py  questionnaire.py
backend/app/core/: config.py
backend/app/core/utils/: __init__.py  dates.py  jwt.py  password.py
backend/app/db/: __init__.py
backend/app/middleware/: cookie_auth.py
backend/app/models/: __init__.py
backend/app/services/: __init__.py  auth.py  avatar.py  ingest.py  interview.py  llm.py  memory.py  ml.py  pipeline.py  portrait.py  questionnaire.py  s3.py  stt.py  summarization.py  vector_db.py
backend/prisma/: schema.prisma
backend/prisma/migrations/20251129141244_init_base_tables/: migration.sql
backend/scripts/: inspect_qdrant.py  migrate.ps1  migrate.sh  seed_questions.py  seed_test_data.py  seed_with_transcripts.py
backend/tests/: test_auth.py  test_health.py
frontend/: index.html  package.json
frontend/src/: App.vue  router.ts  styles.css
frontend/src/modules/auth/pages/: login-page.vue  welcome-page.vue
frontend/src/modules/home/pages/: home-page.vue
frontend/src/modules/onboarding/pages/: face-page.vue  interview-page.vue  personal-page.vue
