[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "altai-digital-twin-backend"
version = "0.1.0"
description = "Backend for Altai Digital Twin — Python + FastAPI + Prisma"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "prisma",
    "psycopg[binary]",    # extras must be in string format
    "bcrypt",
    "pyjwt",
    "qdrant-client",
    "uv",
    "boto3>=1.41.5",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.12.0",
    "langchain-google-genai>=3.2.0",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["app"]
